@@ -355,3 +355,4 @@ Revision	Log Message
 348		Convert raised navies
 349		Convert transported armies
 350		Ships from unraised ships
+351		Fix bug with manpower sometimes being FUBAR
